--- a/index.html
+++ b/index.html
@@ -47,12 +47,10 @@
       background: url('https://images.pexels.com/photos/6424585/pexels-photo-6424585.jpeg?auto=compress&cs=tinysrgb&w=2400&h=1400&dpr=1') center/cover no-repeat;
     }
 
-    .hero h1{ font-size:clamp(2rem, 4vw, 3rem); margin:0 0 14px; letter-spacing:-.02em }
-    .hero p{ max-width:720px; margin:8px auto; color: #fff; -webkit-text-stroke: 1px #000; text-stroke: 1px #000; font-size: clamp(1.25rem, 2.5vw, 1.75rem); line-height: 1.5; }
+    .hero h1{ font-size:clamp(2rem, 4vw, 3rem); margin:0 0 14px; letter-spacing:-.02em; color: #fff; -webkit-text-stroke: 1px #000; text-stroke: 1px #000;  }
+    .hero p{ max-width:720px; margin:6px auto; color: #fff; -webkit-text-stroke: 1px #000; text-stroke: 1px #000; font-size: clamp(1.25rem, 2vw, 1.75rem); line-height: 1.4; }
 
-   /* text color */
-   /* outline in black */
-   /* non-webkit fallback */
+
 
 
 
