--- a/index.html
+++ b/index.html
@@ -40,11 +40,12 @@
       flex-direction: column;
       align-items: center;
       justify-content: center;
-      min-height: 90vh;
+        min-height: 100vh; /* full screen */
+  width: 100%;
       text-align: center;
       color: #fff;
       padding: 0 16px;
-      background: url('https://images.pexels.com/photos/6424585/pexels-photo-6424585.jpeg?auto=compress&cs=tinysrgb&w=2400&h=1400&dpr=1') center/cover no-repeat;
+       background: url('https://images.pexels.com/photos/6424585/pexels-photo-6424585.jpeg?auto=compress&cs=tinysrgb&w=2400&h=1400&dpr=1') center/cover no-repeat fixed;
     }
 
 .hero h1 {
