--- a/index.html
+++ b/index.html
@@ -40,36 +40,47 @@
       flex-direction: column;
       align-items: center;
       justify-content: center;
-        min-height: 100vh; /* full screen */
-  width: 100%;
+      min-height: 100vh; /* full screen */
+      width: 100%;
       text-align: center;
       color: #fff;
       padding: 0 16px;
-       background: url('https://images.pexels.com/photos/6424585/pexels-photo-6424585.jpeg?auto=compress&cs=tinysrgb&w=2400&h=1400&dpr=1') center/cover no-repeat fixed;
+
+      /* Gradient overlay for readability + background image */
+      background: 
+        linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.5)),
+        url('https://images.pexels.com/photos/6424585/pexels-photo-6424585.jpeg?auto=compress&cs=tinysrgb&w=2400&h=1400&dpr=1') 
+        center/cover no-repeat fixed;
     }
 
-.hero h1 {
-  font-size: clamp(2rem, 4vw, 3rem); /* responsive size */
-  margin: 0 0 14px;
-  letter-spacing: -0.02em;
-  font-weight: 700; /* bold */
-  color: #fff;
-}
+    .hero h1 {
+      font-size: clamp(2rem, 4vw, 3rem); /* responsive size */
+      margin: 0 0 14px;
+      letter-spacing: -0.02em;
+      font-weight: 700; /* bold */
+      text-shadow: 2px 2px 6px rgba(0,0,0,0.7); /* subtle shadow for contrast */
+      color: #fff;
+    }
 
-/* Paragraphs below heading */
-.hero p {
-  max-width: 720px;
-  margin: 6px auto;
-  font-size: clamp(1.25rem, 2vw, 1.75rem); /* slightly smaller than heading */
-  line-height: 1.4; /* compact but readable */
-  color: #fff;
-}
+    /* Paragraphs below heading */
+    .hero p {
+      max-width: 720px;
+      margin: 6px auto;
+      font-size: clamp(1.25rem, 2vw, 1.75rem); /* slightly smaller than heading */
+      line-height: 1.4; /* compact but readable */
+      text-shadow: 1px 1px 4px rgba(0,0,0,0.7); /* subtle shadow for readability */
+      color: #fff;
+    }
 
+    .top-actions {
+      display: flex;
+      gap: 10px;
+      justify-content: center;
+      align-items: center;
+      flex-wrap: wrap;
+      margin-top: 20px;
+    }
 
-
-
-
-    .top-actions{ display:flex; gap:10px; justify-content:center; align-items:center; flex-wrap:wrap; margin-top:20px }
     .btn {
       display:inline-block;
       background: var(--accent);
@@ -97,16 +108,16 @@
       padding: 40px 20px;
       border-radius: 16px;
       overflow: hidden;
-            color: #fff;
-	  background: rgba(83, 184, 184, 0.6);
-	  backdrop-filter: blur(6px);
+      color: #fff;
+      background: rgba(83, 184, 184, 0.6);
+      backdrop-filter: blur(6px);
       box-shadow: var(--shadow);
     }
 
     .project iframe {
       width: 100%;
-      height: 350px; /* reduced from 500px */
-      max-height: 450px; /* prevent extreme stretching on large screens */
+      height: 350px; 
+      max-height: 450px;
       border: none;
       border-radius: 12px;
       margin-bottom: 20px;
@@ -114,7 +125,7 @@
 
     .project h2 {
       font-size: 2rem;
-       margin-bottom: 6px; /* reduced margin to bring description closer */
+      margin-bottom: 6px;
       text-align: center;
     }
 
