--- a/index.html
+++ b/index.html
@@ -116,8 +116,8 @@
 
     .project iframe {
       width: 100%;
-      height: 350px; 
-      max-height: 450px;
+      height: 300px; 
+      max-height: 400px;
       border: none;
       border-radius: 12px;
       margin-bottom: 20px;
@@ -198,7 +198,11 @@
       <p>Quick project I made with AI. You can’t win.</p>
       <a class="btn" href="https://github.com/Uncrustable125/Tic-Tac-Toe" target="_blank">View on GitHub</a>
     </div>
-
+    <div class="project">
+      <h2>New Project</h2>
+      <p>a game about selling ramen to hungry people. WiP</p>
+      <a class="btn" href="https://github.com/Uncrustable125/Ramen-Shop" target="_blank">View on GitHub</a>
+    </div>
     <!-- About Me -->
     <div class="project">
       <h2>About Me</h2>
