--- a/index.html
+++ b/index.html
@@ -23,7 +23,23 @@
       color: var(--text);
       line-height: 1.6;
       min-height: 100vh;
-      background: #474747; 
+
+      /* Full-page background image */
+      background: 
+        url('https://images.pexels.com/photos/6424585/pexels-photo-6424585.jpeg?auto=compress&cs=tinysrgb&w=2400&h=1400&dpr=1') 
+        center/cover no-repeat fixed;
+    }
+
+    /* Dark overlay */
+    body::before {
+      content: "";
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background: rgba(0,0,0,0.5);
+      z-index: -1;
     }
 
     a{color:inherit; text-decoration:none}
@@ -45,12 +61,7 @@
       text-align: center;
       color: #fff;
       padding: 0 16px;
-
-      /* Gradient overlay for readability + background image */
-      background: 
-        linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.5)),
-        url('https://images.pexels.com/photos/6424585/pexels-photo-6424585.jpeg?auto=compress&cs=tinysrgb&w=2400&h=1400&dpr=1') 
-        center/cover no-repeat fixed;
+      background: transparent; /* removed background here */
     }
 
     .hero h1 {
