--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         line-height: 1.6;
         min-height: 100vh;
         transform: scale(0.8);
-        transform-origin: top left;
+        transform-origin: top center;
 
         /* Full-page background image */
         background: url("https://images.pexels.com/photos/6424585/pexels-photo-6424585.jpeg?auto=compress&cs=tinysrgb&w=2400&h=1400&dpr=1")
